[package]
name = "graphql-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = "4.0.6"
async-trait = "0.1.57"
axum = "0.5.13"
hyper = "0.14.20"
serde = "1.0.141"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version =  "0.3.4", features = ["map-request-body"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
